# Blockchain_Scrabblos

./: .gitignore  .ocamlformat  INSTALL.md  Makefile  README.md  scrabblos.opam  test.sh
dict/: dict_100000_1_10.txt  dict_100000_5_15.txt
documentation/: message_encoding.tex
src/: answerer.ml  author.ml  client.ml  client_utils.ml  consensus.ml  consensus.mli  constants.ml  crypto.ml  crypto.mli  dictionary.ml  dune  error.ml  id.ml  letter.ml  localtests.ml  log.ml  main_server.ml  mempool.ml  mempool.mli  messages.ml  messages.mli  netpool.ml  politicien.ml  pool.ml  printing_proxy.ml  script-client  script-server  server.ml  store.ml  store.mli  test.ml  utils.ml  word.ml
